<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        tools:context=".Activities.LoginActivity"
        android:background="@drawable/bg_app"
        android:id="@+id/view"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/whiteText"
            android:ems="10"
            android:hint="@string/Pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/et_bg"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/Username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/whiteText"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/login"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/remember" />

        <TextView
            android:id="@+id/link_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            app:layout_constraintVertical_bias="0.958" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="45dp" />

        <Switch
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.97"
            android:text="@string/remember_login"
            app:layout_constraintBottom_toTopOf="@+id/submit"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/forgot" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="45dp" />

        <View
            android:id="@+id/line1"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/submit" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/line1"
            app:layout_constraintTop_toTopOf="@+id/line1"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintStart_toEndOf="@+id/line1" />

        <View
            android:id="@+id/line2"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textview"
            android:drawableLeft="@drawable/google"
            android:padding="14dp"
            android:text="@string/login_google"
            android:textColor="@color/gradientTop"
            android:textSize="17sp"
            android:drawablePadding="17dp"
            app:layout_constraintBottom_toTopOf="@+id/link_reg"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            android:drawableStart="@drawable/google" />




</androidx.constraintlayout.widget.ConstraintLayout>
